--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <div id="fb-root"></div>
 <!--
 <?php include 'facebookJS.php' ?>
-
-<!--sliding login panel--
+-->
+<!--sliding login panel
 <?php include 'login_panel.php' ?>	
 -->
 
