--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <li><a href="register.html">SIGNUP</a></li>
 
                   </ul>
-                  <div>Copyright &#169 2012 - FriendComp Inc.</div>
+                  <div>Copyright &#169; 2012 - FriendComp Inc.</div>
             </div>
       </div>
       <!-- /footer-->
