--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
                   </ul>
                   <div>Copyright &#169; 2012 - FriendComp Inc.</div>
             </div>
+            <script type="text/javascript">
+            //StackMob.Users is a StackMob.Collection predefined for you in the JS SDK
+            var users = new StackMob.Users();
+            users.fetch();
+            </script>
       </div>
       <!-- /footer-->
 
