implementing login with stackmob

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                            
                         <div class="clear"></div>
                         
-                        <a href="javascript:void(0);" class="button alignleft_block bold_only notextdecoration" id="login"><span>Login Now</span></a>
+                        <a href="javascript:void(0);" class="button alignleft_block bold_only notextdecoration" id="btnLoginNow"><span>Login Now</span></a>
 
                     </form>
 	                <!--/user login-->
